printer/groups: groups.cshtml, Datentypen abgleichen

--- a/5.0/printer/src/groups.cshtml
+++ b/5.0/printer/src/groups.cshtml
@@ -41,7 +41,7 @@
                 title = g["title"],
                 items =
                   from b in g["items"]
-                  let queueid = b["queue"]
+                  let queueid = CommonGuidId.FromString((string)b["queue"])
                   let qs = queueStatus.Where(s=>s.Id.Equals(queueid)).FirstOrDefault()
                   select new {
                     title = b["title"],
