display: Use Microsoft Hedda (without Desktop)

--- a/5.0/display/src/Styles.xml.handlebars
+++ b/5.0/display/src/Styles.xml.handlebars
@@ -92,7 +92,7 @@
           <text key="assets/audio/piece-of-cake-611.mp3">Piece of cake</text>
           <text key="assets/audio/quite-impressed-565.mp3">Quite impressed</text>
           <text key="assets/audio/slow-spring-board-longer-tail-571.mp3">Slow spring board</text>
-          <text key="speech://voice=Microsoft Hedda Desktop&amp;text=~number~ bitte zu ~room~">Sprachausgabe (Hedda)</text>
+          <text key="speech://voice=Microsoft Hedda&amp;text=~number~ bitte zu ~room~">Sprachausgabe (Hedda)</text>
         </content_class>
       </field>
       <field key="popup">
