printer: Zurückstellen mit Zeitversatz

--- a/5.0/printer/Styles.xml.handlebars
+++ b/5.0/printer/Styles.xml.handlebars
@@ -102,8 +102,16 @@
     <name>Zurückstellen bis Termin</name>
   </names>
   <content_class type="TextChoose">
-    <text key="0">Nein</text>
-    <text key="1">Ja</text>
+    <text key="">Nein</text>
+    <text key="600">Ja, bis 10 Minuten nach Termin</text>
+    <text key="300">Ja, bis 5 Minuten nach Termin</text>
+    <text key="120">Ja, bis 2 Minuten nach Termin</text>
+    <text key="60">Ja, bis 1 Minute nach Termin</text>
+    <text key="0">Ja, bis Terminzeit</text>
+    <text key="-60">Ja, bis 1 Minute vor Termin</text>
+    <text key="-120">Ja, bis 2 Minuten vor Termin</text>
+    <text key="-300">Ja, bis 5 Minuten vor Termin</text>
+    <text key="-600">Ja, bis 10 Minuten vor Termin</text>
   </content_class>
 </field>
 <field key="lt">
