printer: Leerlauf-timeout konfigurierbar

--- a/5.0/printer/Styles.xml.handlebars
+++ b/5.0/printer/Styles.xml.handlebars
@@ -45,6 +45,20 @@
     <text key="d">unten</text>
   </content_class>
 </field>
+<field key="it">
+  <names>
+    <name>Leerlauf Timeout</name>
+  </names>
+  <content_class type="TextChoose">
+    <text key="8">8 Sekunden</text>
+    <text key="10">10 Sekunden</text>
+    <text key="15">15 Sekunden</text>
+    <text key="20">20 Sekunden</text>
+    <text key="30">30 Sekunden</text>
+    <text key="40">40 Sekunden</text>
+    <text key="60">60 Sekunden</text>
+  </content_class>
+</field>
 <field key="tracking_id">
   <names>
     <name>Tracking-ID</name>
