printer: Termin timeout konfigurierbar

--- a/5.0/printer/Styles.xml.handlebars
+++ b/5.0/printer/Styles.xml.handlebars
@@ -170,6 +170,20 @@
   </names>
   <content_class type="TextFree" />
 </field>
+<field key="at">
+  <names>
+    <name>Termin Timeout</name>
+  </names>
+  <content_class type="TextChoose">
+    <text key="0">Wie Leerlauf-Timeout</text>
+    <text key="5">5 Sekunden</text>
+    <text key="10">10 Sekunden</text>
+    <text key="15">15 Sekunden</text>
+    <text key="20">20 Sekunden</text>
+    <text key="30">30 Sekunden</text>
+    <text key="40">40 Sekunden</text>
+  </content_class>
+</field>
 <field key="import">
   <names>
     <name>Termine</name>
