Upgrade rxjs to 7.8.0

--- a/5.0/printer/src/app/print/print.component.html
+++ b/5.0/printer/src/app/print/print.component.html
@@ -28,6 +28,6 @@
   <h3 *ngIf="ticket.button?.queue">{{ "Print_ShowHeader" | translate }}</h3>
   <h2>{{ ticket.button?.title }}</h2>
   <p>{{ "Print_ShowText1" | translate }}</p>
-  <div class="number">{{ ticket.current?.number }}</div>
+  <div class="number">{{ ticket.current.number }}</div>
   <p>{{ "Print_ShowText2" | translate }}</p>
 </section>
