--- a/5.0/printer/src/styles.scss
+++ b/5.0/printer/src/styles.scss
@@ -37,6 +37,17 @@ a {
   text-decoration: none;
 }
 
+h2 {
+  text-transform: uppercase;
+  font-size: 6.5rem;
+  margin: 2vh 0;
+}
+
+h3 {
+  font-size: 2.7em;
+  margin: 2vh 0;
+}
+
 qrcode {
   /* overwrite style by angularx/qrcode */
   div.qrcode {
