--- a/5.0/printer/src/app/select-appoint-mode/select-appoint-mode.component.scss
+++ b/5.0/printer/src/app/select-appoint-mode/select-appoint-mode.component.scss
@@ -3,8 +3,21 @@
 
 .site-content {
   @include panel;
-
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+
+  img {
+    padding-bottom: 10vh;
+  }
+}
+
+nav {
+  margin: 0 $hmargin;
+
+  a {
+    @include nav-button;
+    margin: 2vh 0;
+    font-size: 3.3rem;
+  }
 }
