--- a/5.0/printer/src/app/entry-select/entry-select.component.html
+++ b/5.0/printer/src/app/entry-select/entry-select.component.html
@@ -10,7 +10,8 @@
 ></textarea>
 
 <nav class="site-nav">
-  <a routerLink="/scan-appointment" queryParamsHandling="preserve">{{
+  <h3>{{ "SelectMode_Info" | translate }}</h3>
+  <a [routerLink]="appointmentRoute" queryParamsHandling="preserve">{{
     "Entry_SelectAppointment" | translate
   }}</a>
   <a routerLink="/select-queue" queryParamsHandling="preserve">{{
