--- a/5.0/printer/src/app/scan-appointment/scan-appointment.component.html
+++ b/5.0/printer/src/app/scan-appointment/scan-appointment.component.html
@@ -1,11 +1,14 @@
 <section>
-  <svg *ngIf="arrow != 'down'" viewBox="0 0 106.95 106.47"><g>
-    <polygon points="41.74,106.13 94.9,53.34 41.74,0.82 41.74,1.33 41.74,25.03 13.04,25.03 13.04,81.44 13.04,81.91 40.74,81.91 41.74,81.91 41.74,104.66"/>
-  </g></svg>
-  <svg *ngIf="arrow == 'down'" viewBox="0 0 106.95 106.47"><g>
-    <polygon points="0.58,41.5 53.37,94.66 105.89,41.5 105.38,41.5 81.68,41.5 81.68,12.8 25.27,12.8 24.8,12.8 24.8,40.5 24.8,41.5 2.05,41.5"/>
-  </g></svg>
-  <h1>{{ "Appoint_Scan" | translate }}</h1>
+  <div>
+    <img src="assets/img/scan_help.gif" class="scan_help" alt="scan_help" />
+    <svg *ngIf="arrow != 'down'" viewBox="0 0 106.95 106.47"><g>
+      <polygon points="41.74,106.13 94.9,53.34 41.74,0.82 41.74,1.33 41.74,25.03 13.04,25.03 13.04,81.44 13.04,81.91 40.74,81.91 41.74,81.91 41.74,104.66"/>
+    </g></svg>
+    <svg *ngIf="arrow == 'down'" viewBox="0 0 106.95 106.47"><g>
+      <polygon points="0.58,41.5 53.37,94.66 105.89,41.5 105.38,41.5 81.68,41.5 81.68,12.8 25.27,12.8 24.8,12.8 24.8,40.5 24.8,41.5 2.05,41.5"/>
+    </g></svg>
+  </div>
+  <h3>{{ "Appoint_Scan" | translate }}</h3>
 </section>
 <textarea
   id="scan"
@@ -14,8 +17,18 @@
   spellcheck="false"
 ></textarea>
 
-<nav *ngIf="showForgotQR">
-  <a (click)="printForgotQrCode()">
+<nav>
+  <h3 *ngIf="timeout">
+    <svg viewBox="0 0 24 24">
+      <path d="M12,2.7c-1.1,0-1.9,0.9-1.9,1.9l0.8,9.7c0,0.6,0.5,1.1,1.1,1.1c0.6,0,1.1-0.5,1.1-1.1l0.8-9.7C13.9,3.6,13,2.7,12,2.7z"/>
+      <path d="M12,16.6c-0.9,0-1.7,0.8-1.7,1.7c0,0.9,0.8,1.7,1.7,1.7s1.7-0.8,1.7-1.7C13.7,17.4,12.9,16.6,12,16.6z"/>
+    </svg>
+    {{ "Appoint_Timeout" | translate }}
+  </h3>
+  <a *ngIf="showForgotQR" (click)="printForgotQrCode()">
     {{ "Appoint_ForgotInvite" | translate }}
+  </a>
+  <a *ngIf="timeout" routerLink="/enter-appoint-id" queryParamsHandling="preserve">
+    {{ "Appoint_SelectEnterId" | translate }}
   </a>
 </nav>
