printer: Druckstatus-Ansicht angepasst

--- a/5.0/printer/src/app/app.component.scss
+++ b/5.0/printer/src/app/app.component.scss
@@ -39,6 +39,9 @@ header {
 
 main {
   position: relative;
+  // enable flex features for router outlet
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
