--- a/5.0/printer/src/app/print/print.component.scss
+++ b/5.0/printer/src/app/print/print.component.scss
@@ -1,38 +1,57 @@
 @import "colors.scss";
 @import "mixins.scss";
 
-section {
+:host {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+section.top {
   @include panel;
-  text-align: center;
+}
+
+section.bottom {
+  flex-grow: 1;
+  margin: 0 $hmargin;
+}
+
+section {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-evenly;
+}
 
-  & > * {
-    margin: auto;
-  }
-  img.wait {
-    width: 25%;
-    opacity: 0.5;
-  }
+img {
+  width: 25%;
+  opacity: 0.5;
+}
+
+svg {
+  width: 25%;
+  text-align: center;
+  fill: $color-secondary-background;
+}
+
+h4 {
+  font-size: 3em;
+  color: $color-secondary-foreground;
+  display: inline-block;
+
   img {
-    width: 13%;
+    width: 10%;
+    vertical-align: middle;
   }
-  svg {
-    width: 13%;
-    fill: $color-secondary-foreground;
-  }
-  h4 {
-    font-size: 2em;
-    color: $color-secondary-foreground;
-    display: inline-block;
-  }
-  p {
-    font-size: 1.8em;
-    font-weight: 600;
-    color: $color-primary-background;
-  }
-  .number {
-    font-size: 4em;
-  }
+}
+
+.number {
+  font-size: 4em;
+}
+
+p {
+  text-align: center;
+  font-size: 2.7em;
+  font-weight: 600;
+  color: $color-primary-background;
 }
