--- a/5.0/printer/src/app/app.component.scss
+++ b/5.0/printer/src/app/app.component.scss
@@ -1,7 +1,7 @@
 @import "colors.scss";
 @import "mixins.scss";
 
-:host:not(.view-print) {
+:host:not(.view-ticket) {
   position: fixed;
   top: 0;
   bottom: 0;
