printer / groups: Termineinträge in Gruppenansicht

--- a/5.0/printer/Styles.xml.handlebars
+++ b/5.0/printer/Styles.xml.handlebars
@@ -204,6 +204,7 @@
     </names>
     <fields>
       {{> commonFields}}
+      {{> appointmentFields}}
       {{> timeoutField}}
     </fields>
   </style>
