printer / Gruppen: Option zur Auswahl der Startseite eingefügt

--- a/5.0/printer/Styles.xml.handlebars
+++ b/5.0/printer/Styles.xml.handlebars
@@ -203,6 +203,15 @@
       <name culture="de">vocatis printer Gruppenkonfiguration {{option_name}} ({{version}})</name>
     </names>
     <fields>
+      <field key="entry">
+        <names>
+          <name>Einstieg</name>
+        </names>
+        <content_class type="TextChoose">
+          <text key="g">groups</text>
+          <text key="s">printer and appointments</text>
+        </content_class>
+      </field>
       {{> commonFields}}
       {{> appointmentFields}}
       {{> timeoutField}}
