--- a/5.0/printer/src/app/groups/groups.component.scss
+++ b/5.0/printer/src/app/groups/groups.component.scss
@@ -1,7 +1,13 @@
 @import "colors.scss";
+@import "mixins.scss";
+
+:host {
+  margin: 0 $hmargin;
+}
+
 table {
-  width: 70%;
-  margin: 0 15vw;
+  width: 100%;
+  margin: 0;
   th {
     text-align: left;
     font-size: 1.5rem;
