printer: Korrekten Text (Entry_Info) auf Eingangsseite (entry_select)

--- a/5.0/printer/src/app/entry-select/entry-select.component.html
+++ b/5.0/printer/src/app/entry-select/entry-select.component.html
@@ -10,7 +10,7 @@
 ></textarea>
 
 <nav class="site-nav">
-  <h3>{{ "SelectMode_Info" | translate }}</h3>
+  <h3>{{ "Entry_Info" | translate }}</h3>
   <a [routerLink]="appointmentRoute" queryParamsHandling="preserve">{{
     "Entry_SelectAppointment" | translate
   }}</a>
