printer: Relativen path zu printer.png verwenden

--- a/5.0/printer/src/app/handle-appointment/handle-appointment.component.scss
+++ b/5.0/printer/src/app/handle-appointment/handle-appointment.component.scss
@@ -47,7 +47,7 @@ figure {
   }
 
   a.print-button {
-    background: $color-secondary-foreground url(/assets/img/printer.png)
+    background: $color-secondary-foreground url(../../assets/img/printer.png)
       no-repeat center;
     display: block;
     padding-bottom: 100%;
