--- a/5.0/printer/src/app/scan-appointment/scan-appointment.component.html
+++ b/5.0/printer/src/app/scan-appointment/scan-appointment.component.html
@@ -46,6 +46,13 @@
     </svg>
     {{ "Appoint_Timeout" | translate }}
   </h3>
+  <h3 *ngIf="isscanning">
+    <svg viewBox="0 0 24 24">
+      <path d="M12,2.7c-1.1,0-1.9,0.9-1.9,1.9l0.8,9.7c0,0.6,0.5,1.1,1.1,1.1c0.6,0,1.1-0.5,1.1-1.1l0.8-9.7C13.9,3.6,13,2.7,12,2.7z"/>
+      <path d="M12,16.6c-0.9,0-1.7,0.8-1.7,1.7c0,0.9,0.8,1.7,1.7,1.7s1.7-0.8,1.7-1.7C13.7,17.4,12.9,16.6,12,16.6z"/>
+    </svg>
+    {{ "Appoint_PleaseWait" | translate }}
+  </h3>
   <a *ngIf="showForgotQR" (click)="printForgotQrCode()">
     {{ "Appoint_ForgotInvite" | translate }}
   </a>
