display: Configurable header and footer

--- a/5.0/display/src/Styles.xml.handlebars
+++ b/5.0/display/src/Styles.xml.handlebars
@@ -64,6 +64,18 @@
     </names>
     <content_class type="VocatisCategories" />
   </field>
+  <field key="header">
+    <names>
+      <name>Überschrift</name>
+    </names>
+    <content_class type="TextFree" />
+  </field>
+  <field key="footer">
+    <names>
+      <name>Fußnote</name>
+    </names>
+    <content_class type="TextFree" />
+  </field>
 {{/inline}}
 
   <style key="vocatic_display_2019{{suffix}}"
