--- a/5.0/display/src/app/app.component.html
+++ b/5.0/display/src/app/app.component.html
@@ -19,5 +19,5 @@
   
  -->
 
-<app-list *ngIf="!popup" [list]="list" [highlight]="getHighlightedItems()"></app-list>
+<app-list *ngIf="!popup" [list]="list" [highlight]="getHighlightedItems()" [header]="header" [footer]="footer"></app-list>
 <app-popup *ngIf="popup" [waitNumber]="popup"></app-popup>
