--- a/5.0/display/src/app/list/list.component.scss
+++ b/5.0/display/src/app/list/list.component.scss
@@ -33,6 +33,10 @@
 }
 
 header {
+  // do not cut off test at the bottom
+  padding-bottom: 5vh;
+  white-space: nowrap;
+
   margin: 0 15vw;
   display: flex;
   align-items: baseline;
@@ -42,6 +46,7 @@ header {
 
   img {
     height: 100%;
+    flex-shrink: 0; // do not shrink (when h1 is large)
   }
   h1 {
     text-transform: uppercase;
@@ -58,7 +63,7 @@ h2 {
 }
 
 table {
-  margin: 5vh 15vw 0vh 15vw;
+  margin: 0 15vw 0 15vw;
   border-collapse: separate;
   border-spacing: 0 2vh;
 
@@ -91,7 +96,7 @@ table {
 /*--- Layout: 1-2 Aufrufe ---*/
 .buttons-1,
 .buttons-2 {
-  margin: 15vh 15vw 10vh 15vw;
+  margin: 10vh 15vw 10vh 15vw;
   tr {
     td {
       font-size: 4.5rem;
@@ -103,7 +108,7 @@ table {
 .buttons-3,
 .buttons-4,
 .buttons-5 {
-  margin: 10vh 15vw 3vh 15vw;
+  margin: 5vh 15vw 3vh 15vw;
   tr {
     td {
       font-size: 4.5rem;
