--- a/5.0/printer/src/app/scan-appointment/scan-appointment.component.html
+++ b/5.0/printer/src/app/scan-appointment/scan-appointment.component.html
@@ -53,10 +53,10 @@
     </svg>
     {{ "Appoint_PleaseWait" | translate }}
   </h3>
-  <a *ngIf="showForgotQR" (click)="printForgotQrCode()">
+  <a *ngIf="showForgotQR" (click)="printForgotQrCode()" rightClick>
     {{ "Appoint_ForgotInvite" | translate }}
   </a>
-  <a *ngIf="timeout" routerLink="/enter-appoint-id" queryParamsHandling="preserve">
+  <a *ngIf="timeout" routerLink="/enter-appoint-id" queryParamsHandling="preserve" rightClick>
     {{ "Appoint_SelectEnterId" | translate }}
   </a>
 </nav>
