--- a/5.0/printer/src/app/handle-appointment/handle-appointment.component.html
+++ b/5.0/printer/src/app/handle-appointment/handle-appointment.component.html
@@ -65,7 +65,7 @@
     <p>{{ "Appoint_TicketTextWScan" | translate }}</p>
     <figure class="left">
       <figcaption>{{ "Appoint_TicketPrint" | translate }}</figcaption>
-      <a class="print-button" (click)="print()" rightClick></a>
+      <a class="print-button" (click)="print()" touchClick></a>
     </figure>
     <figure class="right">
       <figcaption>{{ "Appoint_TicketScan" | translate }}</figcaption>
