--- a/5.0/printer/src/app/select-appoint-mode/select-appoint-mode.component.html
+++ b/5.0/printer/src/app/select-appoint-mode/select-appoint-mode.component.html
@@ -32,10 +32,10 @@
 
 <nav>
   <h3>{{ "SelectMode_Info" | translate }}</h3>
-  <a routerLink="/scan-appointment" queryParamsHandling="preserve" rightClick>{{
+  <a routerLink="/scan-appointment" queryParamsHandling="preserve" touchClick>{{
     "SelectMode_SelectScanQR" | translate
   }}</a>
-  <a routerLink="/enter-appoint-id" queryParamsHandling="preserve" rightClick>{{
+  <a routerLink="/enter-appoint-id" queryParamsHandling="preserve" touchClick>{{
     "SelectMode_SelectEnterId" | translate
   }}</a>
 </nav>
