printer: Folgende Touch-Ereignisse innerhalb von 200ms ignorieren.

--- a/5.0/printer/src/environments/environment.prod.ts.handlebars
+++ b/5.0/printer/src/environments/environment.prod.ts.handlebars
@@ -8,5 +8,6 @@ export const environment = {
   enableOpenClose: {{enable_open_close}},
   enableApp: {{enable_app}},
   appUrl: "../app",
-  showLogo: true
+  showLogo: true,
+  throttleClicks: 200
 };
