display: Migrate to static hosting

--- a/5.0/display-popup/src/Styles.xml.handlebars
+++ b/5.0/display-popup/src/Styles.xml.handlebars
@@ -2,7 +2,7 @@
 <StyleList xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://stollsoft.de/iSign/v2/Content/Forms/Styles">
 
   <style key="vocatis_display_popup_{{suffix}}"
-          file="index.cshtml" preview="assets/img/preview_list.png"
+          file="index.html" preview="assets/img/preview_list.png"
          interactive="false" target="chromium">
     <names>
       <name culture="de">vocatis display popup {{option_name}} ({{version}})</name>
@@ -38,7 +38,7 @@
 
 
   <style key="vocatis_display_popup3_{{suffix}}"
-          file="index.cshtml" preview="assets/img/preview_multilist.png"
+          file="index.html" preview="assets/img/preview_multilist.png"
          interactive="false" target="chromium">
     <names>
       <name culture="de">vocatis display popup multi {{option_name}} ({{version}})</name>
