--- a/5.0/display/src/Styles.xml.handlebars
+++ b/5.0/display/src/Styles.xml.handlebars
@@ -79,7 +79,7 @@
 {{/inline}}
 
   <style key="vocatic_display_2019{{suffix}}"
-          file="index.cshtml" preview="assets/img/preview_list.png"
+          file="index.html" preview="assets/img/preview_list.png"
          interactive="false" target="chromium">
     <names>
       <name culture="de">vocatis list {{option_name}} ({{version}})</name>
@@ -97,7 +97,7 @@
 
 
   <style key="vocatic_display3_2019{{suffix}}"
-          file="index.cshtml" preview="assets/img/preview_multilist.png"
+          file="index.html" preview="assets/img/preview_multilist.png"
          interactive="false" target="chromium">
     <names>
       <name culture="de">vocatis list multi {{option_name}} ({{version}})</name>
