printer: Migrate to static hosting

--- a/5.0/appointment-ui/src/Styles.xml.handlebars
+++ b/5.0/appointment-ui/src/Styles.xml.handlebars
@@ -74,7 +74,7 @@
 {{/inline}}
 
   <style key="vocatis_appointmentui_{{suffix}}"
-         file="index.cshtml" preview="assets/img/preview_list.png"
+         file="index.html" preview="assets/img/preview_list.png"
          interactive="false" target="chromium">
     <names>
       <name culture="de">vocatis appointment ui {{option_name}} ({{version}})</name>
