--- a/5.0/printer/Styles.xml.handlebars
+++ b/5.0/printer/Styles.xml.handlebars
@@ -242,7 +242,7 @@
 {{/inline}}
 
 {{#if use_groups_config}}
-  <style key="vocatis_multi_2019_groupconfig{{suffix}}" file="printer/index.cshtml"
+  <style key="vocatis_multi_2019_groupconfig{{suffix}}" file="printer/index.html"
          interactive="true" target="chromium" preview="printer/assets/img/preview.png">
     <names>
       <name culture="de">vocatis printer Gruppenkonfiguration {{option_name}} ({{version}})</name>
@@ -263,7 +263,7 @@
     </fields>
   </style>
 {{else}}
-  <style key="vocatic_multi_2019{{suffix}}" file="printer/index.cshtml"
+  <style key="vocatic_multi_2019{{suffix}}" file="printer/index.html"
          interactive="true" target="chromium" preview="printer/assets/img/preview.png">
     <names>
       <name culture="de">vocatis printer {{option_name}} ({{version}})</name>
@@ -277,7 +277,7 @@
     </fields>
   </style>
 
-  <style key="vocm19aponly{{suffix}}" file="printer/index.cshtml"
+  <style key="vocm19aponly{{suffix}}" file="printer/index.html"
          interactive="true" target="chromium" preview="printer/assets/img/preview.png">
     <names>
       <name culture="de">vocatis appointments {{option_name}} ({{version}})</name>
@@ -291,7 +291,7 @@
     </fields>
   </style>
 
-  <style key="vocm19ap{{suffix}}" file="printer/index.cshtml"
+  <style key="vocm19ap{{suffix}}" file="printer/index.html"
          interactive="true" target="chromium" preview="printer/assets/img/preview.png">
     <names>
       <name culture="de">vocatis printer and appointments {{option_name}} ({{version}})</name>
@@ -306,7 +306,7 @@
 {{/if}}
 
   <style key="vocatis_ticket_default"
-    file="printer/index.cshtml"
+    file="printer/index.html"
     interactive="false" target="chromium">
     <names>
       <name culture="de">Vocatis Wartemarke (Standard) {{option_name}} ({{version}})</name>
