--- a/5.0/printer/app_src/environments/environment.prod.ts.handlebars
+++ b/5.0/printer/app_src/environments/environment.prod.ts.handlebars
@@ -1,6 +1,6 @@
 export const environment = {
   production: true,
-  statusServiceUrl: "status.cshtml",
-  numberServiceUrl: "number.cshtml",
-  refreshInterval: 10 * 1000 /* ms */
+  refreshInterval: 10 * 1000, /* ms */
+  // use undefined for default (in development mode the demo data files will be used)
+  wellKnownISignUrl: undefined
 };
