--- a/5.0/printer/src/environments/environment.prod.ts.handlebars
+++ b/5.0/printer/src/environments/environment.prod.ts.handlebars
@@ -1,12 +1,12 @@
 export const environment = {
   production: true,
-  groupsServiceUrl: "groups.cshtml",
-  queueServiceUrl: "queues.cshtml",
-  numberServiceUrl: "number.cshtml",
-  appointmentsServiceUrl: "appointments.cshtml",
+  groupsConfigUrl: "config.json",
+  // use undefined for default (in development mode the demo data files will be used)
+  wellKnownISignUrl: undefined /* auto */,
+
   enableOpenClose: {{enable_open_close}},
   enableApp: {{enable_app}},
-  appUrl: "../app",
+  appUrl: "../app/",
   showLogo: true,
   throttleClicks: 200
 };
