printer: Fix warnings

--- a/5.0/printer/src/app/scan-appointment/scan-appointment.component.scss
+++ b/5.0/printer/src/app/scan-appointment/scan-appointment.component.scss
@@ -35,7 +35,7 @@ section {
 
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
   gap: 5vh;
 
   & > div {
